@@ -334,6 +334,7 @@
     BI:
     * 0721 Use hard states in BI aggregates...
     * 0714 BI aggregations now also honor scheduled downtimes...
+    * 0715 BI aggregates now acknowledgement information...
     * 0669 FIX: Fixed regex matching in BI when using character groups [...]...
 
     Reporting & Availability:
